--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,14 +2,20 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - 'main'
   pull_request:
-    branches: [ main ]
+    branches:
+      - 'main'
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
+    env:
+      GOPRIVATE: github.com/Mirantis/mcc
+      GH_ACCESS_TOKEN: ${{ secrets.GH_MCC_ACCESS_TOKEN }}
+      GH_USERNAME: alex-shl
     steps:
     - uses: actions/checkout@v3
 
@@ -17,6 +23,8 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.17
+    - name: Setup MCC gitub repo private access
+      run: git config --global url."https://$GH_USERNAME:$GH_ACCESS_TOKEN@github.com/".insteadOf "https://github.com/"
 
     - name: Build
       run: go build -v ./...
