--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -6,11 +6,11 @@
 # https://github.com/actions/labeler
 
 name: Labeler
-on: [pull_request]
+on:
+  pull_request:
 
 jobs:
   label:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
